--- a/impelNotes/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/impelNotes/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,5 +1,5 @@
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/navigation_bg">
@@ -14,31 +14,60 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/navigation_drawer_header_height"
-            android:src="@drawable/material_wall"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/fon" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_icon_user"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
+                android:src="@drawable/djoli" />
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material"
+                android:layout_toEndOf="@+id/iv_icon_user"
+                android:layout_toRightOf="@+id/iv_icon_user"
+                android:text="Angelina Jolie Pitt" />
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/blue" />
 
         <it.feio.android.omninotes.models.views.NonScrollableListView
             android:id="@+id/drawer_nav_list"
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="wrap_content"
+            android:animationCache="false"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
             android:listSelector="@drawable/icon_selector"
-            android:scrollingCache="false"
-            android:animationCache="false" />
+            android:scrollingCache="false" />
 
         <ViewStub
             android:id="@+id/settings_placeholder"
-            android:inflatedId="@+id/settings_view"
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="wrap_content"
+            android:inflatedId="@+id/settings_view"
             android:layout="@layout/drawer_category_list_footer" />
 
         <it.feio.android.omninotes.models.views.NonScrollableListView
             android:id="@+id/drawer_tag_list"
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="wrap_content"
+            android:animationCache="false"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
@@ -47,8 +76,53 @@
             android:scrollbarSize="4dp"
             android:scrollbarStyle="outsideOverlay"
             android:scrollbarThumbVertical="@drawable/scroll_bar"
-            android:scrollingCache="false"
-            android:animationCache="false" />
+            android:scrollingCache="false" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/blue" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/abc_action_bar_overflow_padding_end_material"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/abc_action_bar_overflow_padding_end_material"
+                android:selectAllOnFocus="true"
+                android:text="Full version" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/abc_action_bar_overflow_padding_end_material"
+                android:selectAllOnFocus="true"
+                android:text="Send a question" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/abc_action_bar_overflow_padding_end_material"
+                android:selectAllOnFocus="true"
+                android:text="Evaluate the application" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/abc_action_bar_overflow_padding_end_material"
+                android:selectAllOnFocus="true"
+                android:text="Socia1 networks" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/blue" />
 
     </LinearLayout>
 </ScrollView>
